# esp-cookie

./: AGENTS.md  CMakeLists.txt  README.md  pytest_cookie.py  sdkconfig.old
components/ui_assets/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  cookie.h  cookie_display.c  cookie_main.c  idf_component.yml
